# jp-corpreg-loader

./: README.md  README_ja.md  pyproject.toml  requirements.txt
.devcontainer/: devcontainer.json
.gemini/: GEMINI.md
.github/workflows/: deploy.yaml  test.yaml
jpcorpreg/: __init__.py  client.py  load.py  writer.py
src/: __init__.py  load.py  utility.py
test/: conftest.py  test_load.py  test_load_diff.py
tests/: conftest.py  test_load.py  test_load_diff.py
